# Smart-choice

WisePrice/: README.md  pyproject.toml  replit.md
WisePrice/backend/: db.py  main.py  models.py  seed.py  utils.py
WisePrice/backend/routes/: auth.py  smartphones.py
WisePrice/frontend/: index.html  package-lock.json  package.json  vite.config.js
WisePrice/frontend/src/: App.jsx  index.css
WisePrice/frontend/src/components/: FilterControls.jsx  Navbar.jsx  SearchBar.jsx  SmartphoneCard.jsx
WisePrice/frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  dialog.jsx  input.jsx  label.jsx  select.jsx
WisePrice/frontend/src/pages/: CSVExport.jsx  CSVUpload.jsx  Dashboard.jsx  LoginPage.jsx  SmartphoneManagement.jsx
WisePrice/frontend/src/utils/: api.js  auth.js
WisePrice/shared/: sample_smartphones.csv
